--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ohiro VN</title>
+    <title>Sữa non Viện Dinh Dưỡng Ohiro Colos</title>
   </head>
 
   <body class="has-animations">
