thumbnail and title

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Sữa non Viện Dinh Dưỡng Ohiro Colos" />
+    <meta property="og:image" content="san-pham-main.jpeg" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="Phát triển toàn diện với Ohiro. Chăm chút cho con từng bữa ăn bữa ngủ tuyệt vời"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!-- Latest compiled and minified CSS -->
